# jinjagen

./: README.md  jinjagen  jinjagen.py  setup.cfg
example/: Makefile  index.html.jinja
example/src/: _base.html.jinja  index.html.jinja
jinjagenadd/: __init__.py
