[metadata]
name = jinjagen
version = 2.0
author = Castedo Ellerman
author_email = castedo@castedo.com
description =
    Short extensible Python script using jinja2 to generate static websites
url = https://github.com/castedo/jinjagen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
python_requires = >=3.6
scripts = jinjagen.py
py_modules = jinjagen
packages = jinjagenadd
install_requires =
    jinja2
    markdown
